# esp32c6-sample

./: .gitignore  Cargo.toml  build.rs
src/: config.rs.example  main.rs  rgb_led.rs  wifi.rs
