[package]
name = "rust-embed2"
version = "0.1.0"
authors = ["Gabe Masiulis <gabe@codeofthenorth.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.33", features = ["native", "binstart"]}
esp-idf-hal = { version = "0.41" }
esp-idf-svc = { version = "0.46", features = ["experimental", "alloc"] }
embedded-svc = { version = "0.25" }
embedded-hal = "0.2.7"
toml-cfg = "0.1.3"
anyhow = "1.0.75"
rgb = "0.8.36"
ssd1306 = "0.8.2"
embedded-graphics = "0.8.1"

[build-dependencies]
embuild = "0.31.2"
anyhow = "1.0.75"
